@@ -1,244 +1,586 @@
 package com.multi.laptellect.recommend.txttag.service;
 
-import com.multi.laptellect.recommend.txttag.model.dao.ProductDAO2;
+import com.multi.laptellect.product.model.dto.LaptopDetailsDTO;
+import com.multi.laptellect.product.model.dto.laptop.LaptopSpecDTO;
+import com.multi.laptellect.product.model.mapper.ProductMapper;
+import com.multi.laptellect.product.service.ProductService;
+import com.multi.laptellect.recommend.txttag.config.CpuConfig;
+import com.multi.laptellect.recommend.txttag.config.GpuConfig;
 import com.multi.laptellect.recommend.txttag.model.dao.ProductTagDAO;
-import com.multi.laptellect.recommend.txttag.model.dao.TagDAO2;
-import com.multi.laptellect.recommend.txttag.model.dto.ProductDTO2;
 import com.multi.laptellect.recommend.txttag.model.dto.TaggDTO;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.regex.Pattern;
 
+@RequiredArgsConstructor
 @Service
 @Slf4j
 public class RecommenService {
-    @Autowired
-    private ProductDAO2 productMapper;
-    @Autowired
-    private TagDAO2 tagMapper;
-    @Autowired
-    private ProductTagDAO productTagMapper;
+
+    private final ProductMapper productMapper; // 제품 매퍼 추가
+    private final ProductTagDAO tagMapper; // 태그 매퍼 추가
+    private final ProductService productService; // 제품 서비스 추가
+    private final CpuConfig cpuConfig;
+    private final GpuConfig gpuConfig;
+
 
     public void assignTagsToProducts() {
-        List<ProductDTO2> products = productMapper.getAllProducts();
-        List<TaggDTO> tags = tagMapper.getAllTags();
+        log.info("태그 할당 프로세스 시작");
 
-        for (ProductDTO2 product : products) {
-            try {
-                productTagMapper.deleteProductTags(product.getProductNo());
-                List<Integer> assignedTags = determineTagsForProduct(product, tags);
-                for (Integer tagNo : assignedTags) {
-                    productTagMapper.insertProductTag(product.getProductNo(), tagNo);
+        ArrayList<Integer> productNOs = tagMapper.findAllProductNo(); // 제품 번호 조회
+        log.info("제품 번호 수 = {}", productNOs.size());
+
+        for (int productNO : productNOs) {
+            log.info("제품 {} 처리 시작", productNO);
+            List<LaptopDetailsDTO> laptopDetails = productMapper.laptopProductDetails(productNO);
+            // 제품 번호별로 태그 할당
+
+
+            if (!laptopDetails.isEmpty()) {
+                log.info("제품 {}의 상세 정보 존재", laptopDetails);
+                LaptopSpecDTO laptops = productService.getLaptopSpec(productNO, laptopDetails);
+
+                List<Integer> tags = determineTagsForProduct(laptops);
+                log.info("제품 {}에 할당된 태그 = {}", productNO, tags);
+
+                for (int tag : tags) {
+
+                    tagMapper.insertProductTag(productNO, tag);
                 }
-                log.info("Tags assigned to product {}: {}", product.getProductNo(), assignedTags);
-            } catch (Exception e) {
-                log.error("Error assigning tags to product {}: {}", product.getProductNo(), e.getMessage());
+
+
+                log.info("태그 할당 완료 = {} ", productNO);
+
+            } else {
+                log.warn("상품 번호 {}에 대한 상세 정보가 없습니다.", productNO);
             }
         }
+        log.info("태그 할당 프로세스 완료");
     }
 
-    private List<Integer> determineTagsForProduct(ProductDTO2 product, List<TaggDTO> tags) {
-        List<Integer> assignedTags = new ArrayList<>();
+    //제품번호별로 태그 할당
+    private List<Integer> determineTagsForProduct(LaptopSpecDTO laptopSpecDTO) {
+        List<Integer> assignedTags = new ArrayList<>(); //미리 선언 해두는게 나음
+        List<TaggDTO> tags = tagMapper.findAllTag();
+        int tagNo; //int 도 미리미리 해두는게 나음
+        log.info("DTO 확인 : {}", laptopSpecDTO);
 
-        String gpu = product.getGpu().toLowerCase();
-        if (isGpuSuitableForSteamOrFPS(gpu)) {
-            assignedTags.add(findTagByData(tags, "스팀게임/FPS 게임"));
+
+        String gpuTypeName = laptopSpecDTO.getGpu().getGpuType();//gpu 종류
+        String gpuName = laptopSpecDTO.getGpu().getGpuChipset();//gpu
+        String screenSize = laptopSpecDTO.getDisplay().getScreenSize();//화면 크기
+        String osName = laptopSpecDTO.getOs();//운영 체제 여부
+        String thicName = laptopSpecDTO.getPortability().getThickness();//두께
+        String usbNo = laptopSpecDTO.getAddOn().getUsb();//usb 단자 갯수
+        String recentNo = laptopSpecDTO.getRegistrationDate();//등록일
+        String weightName = laptopSpecDTO.getPortability().getWeight();//무게
+        String powerName = laptopSpecDTO.getPower().getAdapter();//어댑터
+        String storageName = laptopSpecDTO.getStorage().getStorageCapacity();//저장공간
+        String cpuName = laptopSpecDTO.getCpu().getCpuNumber(); //cpu
+        String panelSurName = laptopSpecDTO.getDisplay().getPanelSurface(); //패널 표면 처리
+        String refreshName = laptopSpecDTO.getDisplay().getResolution(); //해상도
+
+
+        //gpuName, screenSize 변수명 변경
+
+
+        if (isGpuSuitableForSteamOrFPS(gpuName, gpuTypeName)) {
+            tagNo = findTagByData(tags, "게이밍");
+            assignedTags.add(tagNo);
+            log.info("'게이밍' 태그(#{}) 할당", tagNo);
         }
-        if (isGpuSuitableForOnlineGames(gpu)) {
-            assignedTags.add(findTagByData(tags, "온라인 게임"));
+        if (isGpuSuitableForOnlineGames(gpuName, cpuName, gpuTypeName)) {
+            tagNo = findTagByData(tags, "펠월드");
+            assignedTags.add(tagNo);
+            log.info("'펠월드' 태그(#{}) 할당", tagNo);
         }
-        if (isGpuSuitableForAOSGames(gpu)) {
-            assignedTags.add(findTagByData(tags, "AOS게임"));
+        if (isScreenSuitableForCoding(screenSize)) {
+            tagNo = findTagByData(tags, "넓은 화면");
+            assignedTags.add(tagNo);
+            log.info("'넓은 화면' 태그(#{}) 할당", tagNo);
+        }
+        if (isScreenSuitableForDocuments(screenSize)) {
+            tagNo = findTagByData(tags, "작은 화면");
+            assignedTags.add(tagNo);
+            log.info("'작은 화면' 태그(#{}) 할당", tagNo);
+        }
+        if (isScreenSuitableForStudents(screenSize)) {
+            tagNo = findTagByData(tags, "적당한 화면");
+            assignedTags.add(tagNo);
+            log.info("'적당한 화면' 태그(#{}) 할당", tagNo);
+        }
+        if (isWindowsOS(osName)) {
+            tagNo = findTagByData(tags, "윈도우 있음");
+            assignedTags.add(tagNo);
+            log.info("'윈도우' 태그(#{}) 할당", tagNo);
+        }
+        if (isSlim(thicName)) {
+            tagNo = findTagByData(tags, "슬림");
+            assignedTags.add(tagNo);
+            log.info("'슬림' 태그(#{}) 할당", tagNo);
+        }
+        if (isUsb(usbNo)) {
+            tagNo = findTagByData(tags, "많은 USB 단자");
+            assignedTags.add(tagNo);
+            log.info("'많은 usb' 태그(#{}) 할당", tagNo);
+        }
+        if (isUsbe(usbNo)) {
+            tagNo = findTagByData(tags, "적은 USB 단자");
+            assignedTags.add(tagNo);
+            log.info("'적은 Usb' 태그(#{}) 할당", tagNo);
+        }
+        if (isRecent(recentNo)) {
+            tagNo = findTagByData(tags, "최신제품");
+            assignedTags.add(tagNo);
+            log.info("'최신 제품' 태그(#{}) 할당", tagNo);
+        }
+        if (isWeight(weightName)) {
+            tagNo = findTagByData(tags, "가벼움");
+            assignedTags.add(tagNo);
+            log.info("'가벼움' 태그(#{}) 할당", tagNo);
+        }
+        if (isWeighte(weightName)) {
+            tagNo = findTagByData(tags, "무거움");
+            assignedTags.add(tagNo);
+            log.info("'무거움' 태그(#{}) 할당", tagNo);
+        }
+        if (isPower(powerName)) {
+            tagNo = findTagByData(tags, "고전력");
+            assignedTags.add(tagNo);
+            log.info("'고전력' 태그(#{}) 할당", tagNo);
+        }
+        if (isPowerSmall(powerName)) {
+            tagNo = findTagByData(tags, "저전력");
+            assignedTags.add(tagNo);
+            log.info("'저전력' 태그(#{}) 할당", tagNo);
+        }
+        if (isStorage(storageName)) {
+            tagNo = findTagByData(tags, "넉넉한 저장 공간");
+            assignedTags.add(tagNo);
+            log.info("'넉넉한 저장 공간' 태그(#{}) 할당", tagNo);
+        }
+        if (isCoding(cpuName)) {
+            tagNo = findTagByData(tags, "코딩");
+            assignedTags.add(tagNo);
+            log.info("'코딩용' 태그(#{}) 할당", tagNo);
+        }
+        if (isWork(cpuName)) {
+            tagNo = findTagByData(tags, "작업용");
+            assignedTags.add(tagNo);
+            log.info("'작업용' 태그(#{}) 할당", tagNo);
+        }
+        if (isLol(cpuName)) {
+            tagNo = findTagByData(tags, "리그오브레전드");
+            assignedTags.add(tagNo);
+            log.info("'리그오브레전드' 태그(#{}) 할당", tagNo);
+        }
+        if (isBet(cpuName, gpuName, gpuTypeName)) {
+            tagNo = findTagByData(tags, "배틀그라운드");
+            assignedTags.add(tagNo);
+            log.info("'배틀 그라운드' 태그(#{}) 할당", tagNo);
+        }
+        if (islost(cpuName, gpuName, gpuTypeName)){
+            tagNo = findTagByData(tags, "로스트 아크");
+            assignedTags.add(tagNo);
+            log.info("'로스트 아크' 태그(#{}) 할당", tagNo);
+        }
+        if(ispaneSur(panelSurName)) {
+            tagNo = findTagByData(tags, "눈부심 방지");
+            assignedTags.add(tagNo);
+            log.info("'눈부심 방지' 태그(#{}) 할당", tagNo);
+        }
+        if (isRefresh(refreshName)) {
+            tagNo = findTagByData(tags, "높은 해상도");
+            assignedTags.add(tagNo);
+            log.info("'높은 해상도' 태그(#{}) 할당", tagNo);
         }
 
-        String cpu = product.getCpu().toLowerCase();
-        if (isCpuSuitableForCoding(cpu)) {
-            assignedTags.add(findTagByData(tags, "코딩용"));
-        }
-        if (isCpuSuitableForDocuments(cpu)) {
-            assignedTags.add(findTagByData(tags, "문서용"));
-        }
-        if (isCpuSuitableForStudents(cpu)) {
-            assignedTags.add(findTagByData(tags, "학생용/인강용"));
-        }
-
-        double weight = Double.parseDouble(product.getWeight().replace("kg", ""));
-        if (weight <= 1.5) {
-            assignedTags.add(findTagByData(tags, "가벼워요"));
-        } else if (weight >= 2.5) {
-            assignedTags.add(findTagByData(tags, "무거워요"));
-        }
-
-        double screenSize = Double.parseDouble(product.getScreenSize().replace("cm", "").replace("(", "").split("인치")[0]);
-        if (screenSize >= 17.0) {
-            assignedTags.add(findTagByData(tags, "넓은 화면"));
-        } else if (screenSize >= 15.0 && screenSize < 17.0) {
-            assignedTags.add(findTagByData(tags, "적당한 화면"));
-        } else {
-            assignedTags.add(findTagByData(tags, "작은 화면"));
-        }
-
-        int batteryCapacity = Integer.parseInt(product.getBatteryCapacity().replace("Wh", ""));
-        if (batteryCapacity >= 70) {
-            assignedTags.add(findTagByData(tags, "오래 가는 배터리"));
-        } else {
-            assignedTags.add(findTagByData(tags, "짧은 배터리"));
-        }
-
-        if (isDesignBeautiful(product.getProductName())) {
-            assignedTags.add(findTagByData(tags, "예쁜 디자인"));
-        }
-
-        if (isHighPerformance(cpu, gpu)) {
-            assignedTags.add(findTagByData(tags, "동세대 최고 성능"));
-        }
 
         return assignedTags;
     }
 
-    private boolean isGpuSuitableForSteamOrFPS(String gpu) {
-        List<String> suitableGpus = Arrays.asList(
-                "geforce rtx 4090", "geforce rtx 4080", "radeon rx 7900m", "radeon 610m ryzen 9 7845hx",
-                "geforce rtx 3080 ti", "geforce rtx 4070", "geforce rtx 3070 ti", "geforce rtx 4060",
-                "radeon rx 6850m xt", "geforce rtx 3080", "rtx a5000", "geforce rtx 3070",
-                "radeon rx 6800s", "rtx a4000", "geforce rtx 2080"
-        );
-        for (String suitableGpu : suitableGpus) {
-            if (gpu.contains(suitableGpu)) {
+    private boolean islost(String cpu, String gpu, String gpuTypeName) {
+        Map<String, Integer> cEnt = cpuConfig.getCpuMark();
+        Map<String, Integer> gEnt = gpuConfig.getGpuMark();
+        Pattern pattern2 = Pattern.compile("[\\s()]+");
+        String Key3 = pattern2.matcher("i3-6100U (2.3GHz)").replaceAll("");
+        String Key4 = pattern2.matcher("GTX1050 Ti").replaceAll("");
+        Integer cpuScore = cEnt.get(Key3);
+        Integer gpuScore = gEnt.get(Key4);
+        int cpuCode = -1;
+        int gpuCode = -1;
+
+        if (cpu == null || gpu == null || cpuScore == null || gpuScore == null || gpuTypeName == null || gpuTypeName.equals("내장그래픽")) {
+            return false;
+        }
+
+        for (String cpuName : cEnt.keySet()) {
+            String cpuNameC1 = pattern2.matcher(cpuName).replaceAll("");
+            if (cpu.replaceAll("[\\s()]+", "").contains(cpuNameC1)) {
+                cpuCode = cEnt.get(cpuName);
+                break;
+            }
+        }
+        for (String gpuName : gEnt.keySet()) {
+            String gpuNameClean = pattern2.matcher(gpuName).replaceAll("");
+            if (gpu.replaceAll("[\\s()]+", "").contains(gpuNameClean)) {
+                gpuCode = gEnt.get(gpuName);
+                break;
+            }
+        }
+        return cpuCode >= cpuScore && gpuCode >= gpuScore;
+    }
+
+    private boolean isBet(String cpu, String gpu, String gpuTypeName) {
+        Map<String, Integer> cEnt = cpuConfig.getCpuMark();
+        Map<String, Integer> gEnt = gpuConfig.getGpuMark();
+        Pattern pattern2 = Pattern.compile("[\\s()]+");
+        String Key3 = pattern2.matcher("i5-7300U (2.6GHz)").replaceAll("");
+        String Key4 = pattern2.matcher("GTX1050 Ti").replaceAll("");
+        Integer cpuScore = cEnt.get(Key3);
+        Integer gpuScore = gEnt.get(Key4);
+        int cpuCode = -1;
+        int gpuCode = -1;
+
+        if (cpu == null || gpu == null || cpuScore == null || gpuScore == null || gpuTypeName == null || gpuTypeName.equals("내장그래픽")) {
+            return false;
+        }
+
+        for (String cpuName : cEnt.keySet()) {
+            String cpuNameC1 = pattern2.matcher(cpuName).replaceAll("");
+            if (cpu.replaceAll("[\\s()]+", "").contains(cpuNameC1)) {
+                cpuCode = cEnt.get(cpuName);
+                break;
+            }
+        }
+
+        for (String gpuName : gEnt.keySet()) {
+            String gpuNameClean = pattern2.matcher(gpuName).replaceAll("");
+            if (gpu.replaceAll("[\\s()]+", "").contains(gpuNameClean)) {
+                gpuCode = gEnt.get(gpuName);
+                break;
+            }
+        }
+        return cpuCode >= cpuScore && gpuCode >= gpuScore;
+    }
+
+
+    private boolean isLol(String cpu) {
+        Map<String, Integer> cEnt = cpuConfig.getCpuMark();
+        Pattern pattern = Pattern.compile("[\\s()]+");
+        String Key1 = pattern.matcher("i5-8265U (1.6GHz)").replaceAll("");
+        Integer cpuScore1 = cEnt.get(Key1);
+
+        if (cpu == null || cpuScore1 == null) {
+            return false;
+        }
+
+        for (String cpuName : cEnt.keySet()) {
+            String cpuNameC1 = pattern.matcher(cpuName).replaceAll("");
+            if (cpu.replaceAll("[\\s()]+", "").contains(cpuNameC1)) {
+                int cpuCode = cEnt.get(cpuName);
+                return cpuCode > cpuScore1;
+            }
+        }
+        return false;
+    }
+
+    private boolean isWork(String gpu) {
+        Map<String, Integer> ent5 = cpuConfig.getCpuMark();
+        Pattern pattern3 = Pattern.compile("[\\s()]+");
+        String key4 = pattern3.matcher( "i7-1165G7 (2.8GHz)").replaceAll("");
+        String key5 = pattern3.matcher("i3-1005G1 (1.2GHz)").replaceAll("");
+        Integer cpuScoer5 = ent5.get(key4);
+        Integer cpuScoer6 = ent5.get(key5);
+
+        if (gpu == null) {
+            return false;
+        }
+        if (cpuScoer5 == null || cpuScoer6 == null) {
+            return false;
+        }
+            for (String cpuName2 : ent5.keySet()) {
+                String cpuNameC2 = pattern3.matcher(cpuName2).replaceAll("");
+                if (gpu.replaceAll("[\\s()]+", "").contains(cpuNameC2)) {
+                    int cpuCode2 = ent5.get(cpuName2);
+                    return cpuCode2 < cpuScoer5 && cpuCode2 > cpuScoer6;
+                }
+            }
+            return false;
+        }
+
+    private boolean isCoding(String gpu) {
+        Map<String, Integer> ent5 = cpuConfig.getCpuMark();
+        Pattern pattern3 = Pattern.compile("[\\s()]+");
+        String key4 = pattern3.matcher( "i7-1165G7 (2.8GHz)").replaceAll("");
+        String key5 = pattern3.matcher("i3-1315U (1.2GHz)").replaceAll("");
+        Integer cpuScoer5 = ent5.get(key4);
+        Integer cpuScoer6 = ent5.get(key5);
+
+        if (gpu == null) {
+            return false;
+        }
+        if (cpuScoer5 == null || cpuScoer6 == null) {
+            return false;
+        }
+        for (String cpuName2 : ent5.keySet()) {
+            String cpuNameC2 = pattern3.matcher(cpuName2).replaceAll("");
+            if (gpu.replaceAll("[\\s()]+", "").contains(cpuNameC2)) {
+                int cpuCode2 = ent5.get(cpuName2);
+                return cpuCode2 < cpuScoer5 && cpuCode2 > cpuScoer6;
+            }
+        }
+        return false;
+    }
+
+
+    private boolean isGpuSuitableForSteamOrFPS(String gpu, String gpuTypeName) {
+        Map<String, Integer> ent = gpuConfig.getGpuMark();
+        Pattern pattern1 = Pattern.compile("[\\s()]+");
+        String key2 = pattern1.matcher("GTX1650").replaceAll("");
+        Integer gtxScore = ent.get(key2);
+
+        if (gpuTypeName == null || gpuTypeName.equals("내장그래픽")) {
+            return false;
+        }
+        int gpuCode = -1;
+
+        if (gpu == null) {
+            return false;
+        }
+        if (gtxScore == null)
+            return false;
+
+        for (String gpuName : ent.keySet()) {
+            String gpuNameG = pattern1.matcher(gpuName).replaceAll("");
+            if (gpu.replaceAll("[\\s()]+", "").contains(gpuNameG)) {
+                gpuCode = ent.get(gpuName);
+                break;
+            }
+        }
+        return gpuCode >= gtxScore;
+    }
+    private boolean isGpuSuitableForOnlineGames(String cpu, String gpu, String gpuTypeName) {
+        Map<String, Integer> cEnt = cpuConfig.getCpuMark();
+        Map<String, Integer> gEnt = gpuConfig.getGpuMark();
+        Pattern pattern2 = Pattern.compile("[\\s()]+");
+        String Key3 = pattern2.matcher("i7-10750H (2.6GHz)").replaceAll("");
+        String Key4 = pattern2.matcher("RTX4060").replaceAll("");
+        Integer cpuScore1 = cEnt.get(Key3);
+        Integer gpuScore1 = gEnt.get(Key4);
+        int cpuCode = -1;
+        int gpuCode = -1;
+
+        if (cpu == null || gpu == null || cpuScore1 == null || gpuScore1 == null || gpuTypeName == null || gpuTypeName.equals("내장그래픽")) {
+            return false;
+        }
+
+        for (String cpuName : cEnt.keySet()) {
+            String cpuNameC1 = pattern2.matcher(cpuName).replaceAll("");
+            if (cpu.replaceAll("[\\s()]+", "").contains(cpuNameC1)) {
+                 cpuCode = cEnt.get(cpuName);
+                break;
+            }
+        }
+        for (String gpuName : gEnt.keySet()) {
+            String gpuNameClean = pattern2.matcher(gpuName).replaceAll("");
+            if (gpu.replaceAll("[\\s()]+", "").contains(gpuNameClean)) {
+                gpuCode = gEnt.get(gpuName);
+                break;
+            }
+        }
+        return cpuCode >= cpuScore1 && gpuCode >= gpuScore1;
+    }
+
+    private boolean isScreenSuitableForCoding(String screena) {
+        if (screena == null) {
+            return false;
+        } try {
+            String point = screena.replaceAll("[^0-9.]", "");
+            double screenaa = Double.parseDouble(point);
+            return screenaa >= 16;
+        } catch (Exception e){
+            return false;
+        }
+    }
+
+    private boolean isScreenSuitableForDocuments(String screenb) {
+        if (screenb == null) {
+            return false;
+        } try {
+            String point2 = screenb.replaceAll("[^0-9.]", "");
+            double screenbb = Double.parseDouble(point2);
+            return screenbb >= 13 && screenbb < 16;
+        } catch (Exception e) {
+            return false;
+        }
+    }
+
+    private boolean isScreenSuitableForStudents(String screenc) {
+        if (screenc == null) {
+            return false;
+        } try {
+            String point3 = screenc.replaceAll("[^0-9.]", "");
+            double screencc = Double.parseDouble(point3);
+            return screencc < 13;
+        } catch (Exception e) {
+            return false;
+        }
+    }
+
+    private boolean isWindowsOS(String os) {
+        if (os == null) {
+            return false;
+        }
+        List<String> suitableOs = List.of("윈도우11프로", "윈도우11홈", "윈도우10 프로", "윈도우11(설치)", "윈도우10(설치)", "윈도우10");
+        for (String suitableOss : suitableOs) {
+            if (os.contains(suitableOss)) {
                 return true;
             }
         }
         return false;
     }
 
-    private boolean isGpuSuitableForOnlineGames(String gpu) {
-        List<String> suitableGpus = Arrays.asList(
-                "radeon rx 6650m", "radeon rx 6700s", "quadro rtx 5000", "geforce rtx 4050",
-                "radeon rx 7600s", "radeont rx 6850m xt", "geforce rtx 2080 super", "geforce rtx 2070 super",
-                "radeon rx 6600m", "radeon rx 6600s", "radeon pro w6600m", "radeon rx 6700m",
-                "geforce rtx 3060", "radeon rx 6800m", "geforce rtx 2080", "quadro rtx 4000",
-                "rtx a3000", "geforce rtx 2070"
-        );
-        for (String suitableGpu : suitableGpus) {
-            if (gpu.contains(suitableGpu)) {
+    private boolean isSlim(String thickness) {
+        if (thickness == null) {
+            return false;
+        } try {
+            double thicknesValuee = Double.parseDouble(thickness.replace("mm", ""));
+            return thicknesValuee < 20.0;
+        } catch (Exception e){
+            return false;
+        }
+    }
+
+    private boolean isUsb(String usb) {
+        if (usb == null) {
+            return false;
+        }
+        List<String> suitableteUsb = List.of("총5개", "총6개", "총4개");
+        for (String suitabletUsbs : suitableteUsb) {
+            if (usb.contains(suitabletUsbs)) {
+                return true;
+                }
+            }
+            return false;
+    }
+
+    private boolean isUsbe(String usbe) {
+        if (usbe == null) {
+            return false;
+        }
+        List<String> suitableUsbe = List.of("총3개", "총2개");
+        for (String suitableUsebs : suitableUsbe) {
+            if (usbe.contains(suitableUsebs)) {
                 return true;
             }
         }
         return false;
     }
 
-    private boolean isGpuSuitableForAOSGames(String gpu) {
-        List<String> suitableGpus = Arrays.asList(
-                "quadro p5200", "radeon rx 6850m", "geforce rtx 2070", "geforce gtx 1080",
-                "radeon rx 7600m xt", "intel arc a770m", "geforce rtx 2060", "quadro rtx 3000",
-                "geforce gtx 1070", "geforce rtx 3050", "geforce gtx 1660 ti", "rtx a2000",
-                "radeon rx 6550m", "radeon pro 5600m", "radeon rx 5600m"
-        );
-        for (String suitableGpu : suitableGpus) {
-            if (gpu.contains(suitableGpu)) {
+    private boolean isRecent(String recent) {
+        if (recent == null) {
+            return false;
+        }
+        List<String> suitableRecent = List.of("2024");
+        for (String suitableRecents : suitableRecent) {
+            if (recent.contains(suitableRecents)) {
                 return true;
             }
         }
         return false;
     }
 
-    private boolean isCpuSuitableForCoding(String cpu) {
-        List<String> suitableCpus = Arrays.asList(
-                "amd ryzen 9 7945hx3d", "amd ryzen 9 7945hx", "amd ryzen 9 7940hx",
-                "intel core i9-13980hx", "intel core i9-14900hx", "amd ryzen 9 7845hx",
-                "intel core i9-13900hx", "intel core i9-13950hx", "intel core i7-14650hx",
-                "intel core i7-13850hx", "intel core i7-14700hx", "intel core i9-12900hx",
-                "intel core i7-13700hx", "amd ryzen 7 7745hx", "intel core i9-12950hx",
-                "intel core i7-12800hx", "amd ryzen 9 8945h", "intel core i9-13900hk",
-                "intel core i7-13650hx", "intel core i7-12850hx"
-        );
-        for (String suitableCpu : suitableCpus) {
-            if (cpu.contains(suitableCpu)) {
-                return true;
+    private boolean ispaneSur(String panel) {
+        if (panel == null) {
+            return false;
+        }
+        List<String> suitableSur = List.of("눈부심 방지");
+        for (String suitableSure : suitableSur) {
+            if (panel.contains(suitableSure)) {
+
             }
         }
-        return false;
-    }
+        return true;
 
-    private boolean isCpuSuitableForDocuments(String cpu) {
-        List<String> suitableCpus = Arrays.asList(
-                "intel core i5-1235u", "amd ryzen 3 5425u", "intel pentium gold 7505",
-                "intel core i3-1215u", "amd ryzen 3 5300u", "intel core i3-1115g4",
-                "intel core i5-10210u", "amd ryzen 3 3250u", "intel core i3-1005g1",
-                "intel pentium gold 6405u", "intel core i3-8145u", "amd athlon gold 3150u",
-                "intel celeron 6305", "amd athlon silver 3050u", "intel pentium 6805"
-        );
-        for (String suitableCpu : suitableCpus) {
-            if (cpu.contains(suitableCpu)) {
-                return true;
-            }
+    }
+    private boolean isWeight(String weight) {
+        if (weight == null) {
+            return false;
+        } try {
+            double weighta = Double.parseDouble(weight.replace("kg", ""));
+            return weighta < 2.1;
+        } catch (Exception e) {
+            return false;
         }
-        return false;
     }
 
-    private boolean isCpuSuitableForStudents(String cpu) {
-        List<String> suitableCpus = Arrays.asList(
-                "intel core i5-12500h", "amd ryzen 5 5600h", "intel core i5-11400h",
-                "amd ryzen 5 4600h", "intel core i5-10300h", "amd ryzen 5 4500u",
-                "intel core i5-1135g7", "amd ryzen 5 5500u", "intel core i5-10210u",
-                "amd ryzen 5 3500u", "intel core i7-1165g7", "amd ryzen 7 4700u",
-                "intel core i7-10510u", "amd ryzen 7 5700u", "intel core i7-1185g7"
-        );
-        for (String suitableCpu : suitableCpus) {
-            if (cpu.contains(suitableCpu)) {
-                return true;
-            }
+    private boolean isWeighte(String weighte) {
+        if (weighte == null){
+            return false;
+    } try {
+            double weightee = Double.parseDouble(weighte.replace("kg", ""));
+            return weightee > 2.1;
+        } catch (Exception e) {
+            return false;
         }
-        return false;
     }
 
-    private boolean isDesignBeautiful(String model) {
-        List<String> beautifulModels = Arrays.asList(
-                "macbook air (m1, 2020)", "macbook air (m2, 2022)", "macbook pro 13-inch (m1, 2020)",
-                "macbook pro 14-inch (2021)", "macbook pro 16-inch (2021)", "macbook pro 13-inch (m2, 2022)",
-                "lg gram 14 (14z90p)", "lg gram 16 (16z90p)", "lg gram 17 (17z90p)",
-                "lg gram 2-in-1 14 (14t90p)", "lg gram 2-in-1 16 (16t90p)", "lg gram superslim (15z90rt)",
-                "lg gram style (16z90rs)"
-        );
-        for (String beautifulModel : beautifulModels) {
-            if (model.toLowerCase().contains(beautifulModel)) {
-                return true;
-            }
+    private boolean isPower(String power) {
+        if (power == null) {
+        } try {
+            double powerWh = Double.parseDouble(power.replace("W", ""));
+            return powerWh > 80;
+        } catch (Exception e) {
+            return false;
         }
-        return false;
     }
 
-    private boolean isHighPerformance(String cpu, String gpu) {
-        List<String> highPerformanceCombos = Arrays.asList(
-                "amd ryzen 9 7945hx3d geforce rtx 4090",
-                "intel core i9-14900hx geforce rtx 4080",
-                "amd ryzen 9 7945hx radeon rx 7900m",
-                "intel core i9-13980hx geforce rtx 3080 ti",
-                "amd ryzen 9 7940hs radeon rx 6850m xt",
-                "intel core i9-13905h geforce rtx 3080",
-                "amd ryzen 9 6980hx radeon rx 6800m",
-                "intel core i9-12900hx rtx a5000",
-                "apple m3 max"
-        );
-        String combo = (cpu + " " + gpu).toLowerCase();
-        for (String highPerformanceCombo : highPerformanceCombos) {
-            if (combo.contains(highPerformanceCombo)) {
-                return true;
-            }
+    private boolean isPowerSmall(String powersmall) {
+        if (powersmall == null) {
+        } try {
+            double powerWhSmall = Double.parseDouble(powersmall.replace("W", ""));
+            return powerWhSmall < 80;
+        } catch (Exception e) {
+            return false;
         }
-        return false;
     }
 
-    private int findTagByData(List<TaggDTO> tags, String tagData) {
+    private boolean isStorage(String storage) {
+        if (storage == null) {
+        } try {
+            double storageBig = Double.parseDouble(storage.replace("GB", ""));
+            return storageBig > 511;
+        } catch (Exception e) {
+            return false;
+        }
+    }
+
+    private boolean isRefresh(String refresh) {
+        if (refresh == null) {
+        } try {
+            double RefreshBig = Double.parseDouble(refresh.replaceAll("[\\\\s()a-zA-Z-]+", ""));
+            return RefreshBig > 19201080;
+        } catch (Exception e) {
+            return false;
+        }
+    }
+
+
+
+    private int findTagByData(List<TaggDTO> tags, String tagData ) {
         for (TaggDTO tag : tags) {
             if (tag.getTagData().equals(tagData)) {
+                log.info("태그 '{}' 찾음: #{}", tagData, tag.getTagNo());
                 return tag.getTagNo();
             }
         }
+        log.warn("태그 '{}' 를 찾을 수 없음", tagData);
         return -1;
     }
 }
